upgrade to ViewPager2, add Firebase analytics